further CSS chnages

--- a/src/Components/Nav/nav.module.scss
+++ b/src/Components/Nav/nav.module.scss
@@ -1,25 +1,46 @@
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 60%;
-    min-width: 45rem;
-    height: 2rem;
-    font-size: 1.5rem;
-    font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 2rem;
+  font-size: 2.5rem;
+  font-weight: bold;
   }
   
+.navicon {
+  display: none;
+}
+
+.navlink {
+  color: #00B1C4;
+  text-decoration: none;
+  align-items: center;
+  width: 100%;
+  min-width: 45rem;
+  height: 2rem;
+  font-size: 1.75rem;
+  font-weight: bold;
+}
+
+.navlink:hover {
+  color: #67FBD1;
+}
+
+@media only screen and (max-width: 60rem) {
   .navlink {
-    color: #00B1C4;
-    text-decoration: none;
-  }
-  
-  .navlink:hover {
-    color: #67FBD1;
+    display: none;
   }
 
-@media only screen and (max-width: 80rem) {
-  nav {
-    display: none;
+  .navicon {
+    display: inline;
+    justify-content: space-between;
+    color: #00B1C4;
+    text-decoration: none;
+    align-items: center;
+    width: 100%;
+    height: 2rem;
+    font-size: 2.5rem;
+    font-weight: bold;
   }
 }
