--- a/src/Components/Footer/footer.module.scss
+++ b/src/Components/Footer/footer.module.scss
@@ -1,6 +1,8 @@
+@import '../../Styles/variables.module.scss';
+
 footer {
-    position: fixed;
-    bottom: 0;
+  position: fixed;
+  bottom: 0;
   }
 
 .iconContainer {
@@ -14,10 +16,41 @@ footer {
 
 a {
   text-decoration: none;
-  color: #00B1C4;
+  color: var(--Tertiary);
   padding: .5rem;
 }
 
 a:hover {
-  color: #67FBD1;
+  color: var(--Accent);
+}
+
+@media only screen and (max-width: 80rem) {
+  footer {
+    position: relative;
+  }
+
+  .iconContainer {
+    all: unset;
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+}
+
+@media only screen and (max-width: 40rem) {
+  footer {
+    position: relative;
+  }
+
+  .iconContainer {
+    all: unset;
+    position: bottom;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
 }
