--- a/src/Styles/main.module.scss
+++ b/src/Styles/main.module.scss
@@ -1,12 +1,9 @@
-/* colours used: 
-background: #B6B2F0, Primary: #004D54, Secondary: #00B1C4, 
-Tertiary: #FFF, Accent: #67FBD1 */
+@import 'variables.module.scss';
 
-/* main styles */
 body {
-  color: white;
-  background-color: #B6B2F0;
-  font-family: "Ubuntu", Helvetica, sans-serif;
+  color: var(--Primary);
+  background-color: var(--background);
+  font-family: var(--font-family);
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 1rem;
@@ -18,7 +15,7 @@ h2,
 h3 {
   font-weight: bold;
   position: inline;
-  color: #004D54;
+  color: var(--Secondary);
 }
 
 .col1 {
@@ -51,6 +48,19 @@ h3 {
 }
 
 /* responsivity */
+@media only screen and (max-width: 100rem) {
+  body {
+    overflow-y: unset;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .col1, .col2, .col3 {
+    width: 50%;
+  }
+}
+
+
 @media only screen and (max-width: 80rem) {
   body {
     overflow-y: unset;
@@ -68,31 +78,5 @@ h3 {
     overflow-y: unset;
     padding-left: 2.5%;
     padding-right: 2.5%;
-  }
-  .nav-desktop {
-    display: none;
-  }
-  .nav-mobile {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 2rem;
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-
-  .icon-container{
-    all: unset;
-    position: bottom;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-
-  footer {
-    position: relative;
   }
 }
