--- a/src/Styles/variables.module.scss
+++ b/src/Styles/variables.module.scss
@@ -12,4 +12,9 @@
 
     --shadow-focus: #8986b4;
     --highlight-focus: #e4dfff;
+
+    --codebox: #f9f971a6;
+
+    --light: #ffffff5d;
+    --light-hover: #F9F871;
 }
