--- a/src/Components/Footer/footer.module.scss
+++ b/src/Components/Footer/footer.module.scss
@@ -1,5 +1,3 @@
-@import '../../Styles/variables.module.scss';
-
 footer {
   position: fixed;
   bottom: 0;
@@ -24,20 +22,20 @@ a:hover {
   color: var(--Accent);
 }
 
-@media only screen and (max-width: 80rem) {
-  footer {
-    position: relative;
-  }
+// @media only screen and (max-width: 80rem) {
+//   footer {
+//     position: relative;
+//   }
 
-  .iconContainer {
-    all: unset;
-    position: absolute;
-    bottom: 0%;
-    right: 0%;
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-}
+//   .iconContainer {
+//     all: unset;
+//     position: absolute;
+//     bottom: 0%;
+//     right: 0%;
+//     font-size: 1.5rem;
+//     font-weight: bold;
+//   }
+// }
 
 @media only screen and (max-width: 40rem) {
   footer {
