--- a/src/Styles/variables.module.scss
+++ b/src/Styles/variables.module.scss
@@ -10,11 +10,11 @@
     --shadow: #9b97cc;
     --highlight: #d1cdff;
 
-    --shadow-focus: #8986b4;
-    --highlight-focus: #e4dfff;
+    --shadow-focus: #B6B2F0;
+    --highlight-focus: #B6B2F0;
 
     --codebox: #f9f971a6;
 
-    --light: #ffffff5d;
+    --light: #ffffff;
     --light-hover: #F9F871;
 }
