--- a/src/Styles/main.module.scss
+++ b/src/Styles/main.module.scss
@@ -11,12 +11,16 @@ body {
   overflow: hidden;
 }
 
-h1,
-h2,
-h3 {
+h1 {
   font-weight: bold;
   position: inline;
   color: var(--Secondary);
+}
+
+h2, h3 {
+  font-weight: bold;
+  position: inline;
+  color: var(--Tertiary);
 }
 
 .col1 {
