Codebox upgraded to react-syntax-highligher module

--- a/src/Components/CodeBox/codebox.module.scss
+++ b/src/Components/CodeBox/codebox.module.scss
@@ -1,6 +1,9 @@
 .codebox {
-    font-family: Consolas;
     background-color: var(--codebox);
     padding: 1rem;
     border-radius: 1rem;
+}
+
+.highlighter {
+    background-color: unset!important;
 }
