--- a/src/Styles/dotnet-and-csharp.module.scss
+++ b/src/Styles/dotnet-and-csharp.module.scss
@@ -2,6 +2,16 @@
     display: none;
   }
 
+.inlineLink {
+    padding: 0;
+}
+
+.inlineCode {
+    font-size: 1rem;
+    color: #0048ab;
+    background-color: var(--codebox)
+}
+
 @media only screen and (max-width: 80rem) {
     .mobileHeading {
         display: block;
