more blog posts added

--- a/src/Styles/variables.module.scss
+++ b/src/Styles/variables.module.scss
@@ -11,6 +11,7 @@
     --highlight: #d1cdff;
    
     --codebox: #ffffff86;
+    --caption: #ffffffb9;
 
     --light: #ffffff;
     --light-hover: #F9F871;
