--- a/src/Styles/dotnet-and-csharp.module.scss
+++ b/src/Styles/dotnet-and-csharp.module.scss
@@ -12,6 +12,20 @@
     background-color: var(--codebox)
 }
 
+img {
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+p.caption {
+    color: var(--caption);
+    font-style: italic;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
 @media only screen and (max-width: 80rem) {
     .mobileHeading {
         display: block;
