--- a/src/Components/DarkMode/darkmodetoggle.module.scss
+++ b/src/Components/DarkMode/darkmodetoggle.module.scss
@@ -1,10 +1,10 @@
 .darkmodetoggle {
     position: absolute;
-    top: 1.5rem;
+    top: 0;
+    padding-top: 2rem;
     right: 10%;
 }
 
-/* From uiverse.io by @ke1221 */
 button {
   background: transparent;
   border: none;
@@ -16,4 +16,10 @@ button {
   i:hover {
     color: var(--light-hover);
   }
+ }
+
+ @media only screen and (max-width: 80rem) {
+   .darkmodetoggle {
+     padding-top: 1.5rem;
+   }
  }
