--- a/src/Components/Nav/nav.module.scss
+++ b/src/Components/Nav/nav.module.scss
@@ -1,10 +1,8 @@
 nav {
-  display: flex;
+  display: absolute;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 2rem;
-  padding-bottom: 2rem;
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -50,8 +48,7 @@ nav {
 @media only screen and (max-width: 80rem) {
   nav{
     all: unset;
-    display: block;
-    padding-bottom: 2rem;
+    display: absolute;
   }
   .activelink {
     display: none;
