--- a/src/Styles/dotnet-and-csharp.module.scss
+++ b/src/Styles/dotnet-and-csharp.module.scss
@@ -30,6 +30,13 @@ p.caption {
     text-align: center;
 }
 
+a.anchor {
+    display: block;
+    position: relative;
+    top: -6rem;
+    visibility: hidden;
+}
+
 @media only screen and (max-width: 80rem) {
     .mobileHeading {
         display: block;
