added animations and splash screen

--- a/src/Components/Cards/card.module.scss
+++ b/src/Components/Cards/card.module.scss
@@ -1,4 +1,8 @@
 .card {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    opacity: 0;
+    animation-name: fadeInUp;
     border-radius: 50px;
     background: var(--background);
     box-shadow:  20px 20px 60px var(--shadow),
@@ -12,14 +16,29 @@
     }
   }
 
+  @keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+
 .blogpost {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    opacity: 0;
+    animation-name: fadeInUp;
     border-radius: 50px;
     background: var(--background);
     box-shadow:  20px 20px 60px var(--shadow),
                  -20px -20px 60px var(--highlight);
     padding: 1.5rem;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 15%;
+    margin-right: 5%;
     margin-bottom: 2.5rem;
     max-width: 80rem;    
     box-sizing: border-box;
@@ -38,7 +57,7 @@
     cursor: pointer;
   }
 
-  @media only screen and (max-width: 100rem) {
+  @media only screen and (max-width: 90rem) {
     .blogpost {
         margin-left: 0;
         margin-right: 0;
