Global colour changes

--- a/src/Styles/variables.module.scss
+++ b/src/Styles/variables.module.scss
@@ -2,13 +2,13 @@
     --font-family: "Ubuntu", Helvetica, sans-serif;
 
     --Primary: #fff;
-    --Secondary: #004D54;
-    --Tertiary: #00B1C4;
-    --Accent: #67FBD1;
-    --background: #B6B2F0;
+    --Secondary: #fff;
+    --Tertiary: #fff;
+    --Accent: #fff;
+    --background: #8FC3F7;
 
-    --shadow: #9b97cc;
-    --highlight: #d1cdff;
+    --shadow: #fff;
+    --highlight: #fff;
    
     --codebox: #ffffff86;
     --caption: #ffffffb9;
