Responsivity issues resolved

--- a/src/Styles/card.module.scss
+++ b/src/Styles/card.module.scss
@@ -57,9 +57,13 @@
     cursor: pointer;
   }
 
-  @media only screen and (max-width: 90rem) {
+@media only screen and (max-width: 90rem) {
     .blogpost {
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 1rem;
+        margin-right: -1rem;
     }
+    .card {
+      margin-left: 0;
+      margin-right: 0;
+  }
 }
