Responsivity issues resolved #6

--- a/src/Styles/main.module.scss
+++ b/src/Styles/main.module.scss
@@ -8,7 +8,8 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 1.5rem;
-  min-width: 25rem;
+  min-width: 20rem;
+  overflow-x: hidden;
 }
 
 .loader {
