CSS title fix #2

--- a/src/Styles/dotnet-and-csharp.module.scss
+++ b/src/Styles/dotnet-and-csharp.module.scss
@@ -43,6 +43,7 @@ a.anchor {
 @media only screen and (max-width: 65rem) {
     .mobileHeading {
         display: block;
+        padding-top: 1.5rem;
     }
 
     .padding {
