Fixed Lighthouse recommendations. #2

--- a/src/Styles/nav.module.scss
+++ b/src/Styles/nav.module.scss
@@ -8,7 +8,7 @@ nav {
 }
 
 .activelink {
-  color: var(--Secondary);
+  color: var(--Quaternary);
   text-decoration: none;
   align-items: center;
   width: 100%;
@@ -55,7 +55,7 @@ nav {
     display: none;
   }
   .activeicon {
-    color: var(--Secondary);
+    color: var(--Quaternary);
     display: inline;
     align-items: center;
     padding-right: 2.5%;
