--- a/src/Styles/variables.module.scss
+++ b/src/Styles/variables.module.scss
@@ -4,6 +4,7 @@
     --Primary: #fff;
     --Secondary: #fff;
     --Tertiary: #fff;
+    --Quaternary: #fff;
     --Accent: #fff;
     --background: #8FC3F7;
 
