--- a/src/Styles/pagecontents.module.scss
+++ b/src/Styles/pagecontents.module.scss
@@ -3,8 +3,8 @@
     animation-fill-mode: both;
     opacity: 0;
     animation-name: fadeInRight;
-
     position: fixed;
+    min-width: 19rem;
     top: 11rem;
     left: 0;
     padding: .5%;
