CSS tweaks for demo mobile view

--- a/src/Styles/demo.module.scss
+++ b/src/Styles/demo.module.scss
@@ -53,7 +53,7 @@
 }
 
 .push {
-    min-height: 1.9rem;
+    min-height: 5rem;
   }
 
 @keyframes fadeInRight {
@@ -66,3 +66,24 @@
         opacity: 1
     }
 }
+
+@media only screen and (max-width: 100rem) {
+    .demobuttons {
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+    }
+
+    .position {
+        all: unset;
+    }
+
+    .container {
+        flex-direction: row;
+        justify-content: unset;
+    }
+
+    .push {
+        min-height: calc(100vh - 55.5rem);
+      }
+    
+  }
