--- a/src/Styles/main.module.scss
+++ b/src/Styles/main.module.scss
@@ -9,6 +9,7 @@ body {
   padding-right: 10%;
   padding-top: 1.5rem;
   min-width: 20rem;
+  transition: all 0.2s;
 }
 
 .loader {
@@ -96,6 +97,7 @@ a {
   border-bottom-right-radius: 50px;
   box-shadow:  20px 20px 60px var(--shadow),
   -20px -20px 60px var(--highlight);
+  transition: all 0.2s;
 }
 
 @keyframes fadeInUp {
