--- a/src/Styles/variables.module.scss
+++ b/src/Styles/variables.module.scss
@@ -1,19 +1,19 @@
 :root {
-    --font-family: "Ubuntu", Helvetica, sans-serif;
+  --font-family: 'Ubuntu', Helvetica, sans-serif;
 
-    --Primary: #fff;
-    --Secondary: #fff;
-    --Tertiary: #fff;
-    --Quaternary: #fff;
-    --Accent: #fff;
-    --background: #8FC3F7;
+  --Primary: #fff;
+  --Secondary: #fff;
+  --Tertiary: #fff;
+  --Quaternary: #fff;
+  --Accent: #fff;
+  --background: #8fc3f7;
 
-    --shadow: #fff;
-    --highlight: #fff;
-   
-    --codebox: #ffffff86;
-    --caption: #ffffffb9;
+  --shadow: #fff;
+  --highlight: #fff;
 
-    --light: #ffffff;
-    --light-hover: #F9F871;
+  --codebox: #ffffff86;
+  --caption: #ffffffb9;
+
+  --light: #ffffff;
+  --light-hover: #f9f871;
 }
