--- a/src/Styles/pages.module.scss
+++ b/src/Styles/pages.module.scss
@@ -1,71 +1,68 @@
 .padding {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .mobileHeading {
-    display: none;
+  display: none;
 }
 
 .inlineLink {
-    padding: 0;
-    font-weight: bold;
-    transition: color 0.5s;
+  padding: 0;
+  font-weight: bold;
+  transition: color 0.5s;
 }
 
 .inlineCode {
-    font-size: 1rem;
-    color: #0048ab;
-    background-color: var(--codebox)
+  color: #0048ab;
+  background-color: var(--codebox);
 }
 
 img {
-    max-width: 80%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p.caption {
-    color: var(--caption);
-    font-style: italic;
-    font-size: 0.8rem;
-    text-align: center;
+  color: var(--caption);
+  font-style: italic;
+  font-size: 0.8rem;
+  text-align: center;
 }
 
 a.anchor {
-    display: block;
-    position: relative;
-    top: -6rem;
-    visibility: hidden;
+  display: block;
+  position: relative;
+  top: -6rem;
+  visibility: hidden;
 }
 
-
-
 @media only screen and (max-width: 65rem) {
-    .mobileHeading {
-        display: block;
-        padding-top: 1rem;
-    }
+  .mobileHeading {
+    display: block;
+    padding-top: 1rem;
+  }
 
-    .padding {
-        display: none;
-    }
+  .padding {
+    display: none;
+  }
 
-    .title {
-        animation-duration: 1s;
-        animation-fill-mode: both;
-        opacity: 0;
-        animation-name: fadeInDown;
-    }
+  .title {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    opacity: 0;
+    animation-name: fadeInDown;
+  }
 }
 
 @keyframes fadeInDown {
-    from {
-        transform: translate3d(0, 50px, 0)
-    }
+  from {
+    transform: translate3d(0, 50px, 0);
+  }
 
-    to {
-        transform: translate3d(0, 0, 0);
-        opacity: 1
-    }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
 }
