--- a/src/Styles/footer.module.scss
+++ b/src/Styles/footer.module.scss
@@ -18,10 +18,9 @@ a {
   text-decoration: none;
   color: var(--Tertiary);
   padding: 0.5rem;
-}
-
-a:hover {
-  color: var(--Accent);
+  &:hover {
+    color: var(--Accent);
+  }
 }
 
 @media only screen and (max-width: 40rem) {
