--- a/src/Styles/pagecontents.module.scss
+++ b/src/Styles/pagecontents.module.scss
@@ -32,6 +32,9 @@
     padding: 1.5rem;
     transition: left 0.4s ease-in-out;
     z-index: 1;
+    &:hover {
+      left: 0;
+    }
   }
 
   .toggle {
@@ -41,10 +44,6 @@
     left: 96%;
     top: 45%;
     font-size: 1rem;
-  }
-
-  .pagecontent:hover {
-    left: 0px;
   }
 }
 
