caption colour change

--- a/src/Styles/pages.module.scss
+++ b/src/Styles/pages.module.scss
@@ -25,7 +25,7 @@ img {
 }
 
 p.caption {
-  color: var(--caption);
+  color: var(--Primary);
   font-style: italic;
   font-size: 0.8rem;
   text-align: center;
