--- a/src/Styles/main.module.scss
+++ b/src/Styles/main.module.scss
@@ -22,7 +22,7 @@ body {
 h1 {
   font-weight: bold;
   position: inline;
-  color: var(--Secondary);
+  color: var(--Quaternary);
 }
 
 h2,
@@ -67,6 +67,7 @@ a {
 }
 
 .inlineLink {
+  color: var(--Quaternary);
   padding: 0;
   font-weight: bold;
 }
