WCAG colour update #2

--- a/src/Styles/pages.module.scss
+++ b/src/Styles/pages.module.scss
@@ -15,7 +15,7 @@
 
 .inlineCode {
   font-weight: bold;
-  color: #0048ab;
+  color: #EBDBB2;
   background-color: var(--codebox);
   padding: 0 0.2rem;
 }
