--- a/src/Styles/variables.module.scss
+++ b/src/Styles/variables.module.scss
@@ -6,13 +6,13 @@
   --Tertiary: #fff;
   --Quaternary: #fff;
   --Accent: #fff;
-  --background: #8fc3f7;
+  --background: #fff;
 
   --shadow: #fff;
   --highlight: #fff;
 
-  --codebox: #ffffff86;
+  --codebox: #2a2b28;
 
   --light: #ffffff;
-  --light-hover: #f9f871;
+  --light-hover: #fff;
 }
